--- a/index.html
+++ b/index.html
@@ -69,16 +69,54 @@
     textarea:focus {
       box-shadow: 0 0 0 2px #00b4ff;
     }
-    .viewer {
+    .viewer-wrapper {
+      position: relative;
       width: 100%;
       min-height: 260px;
       max-height: 400px;
       border-radius: 10px;
-      border: none;
       background: #0f2027;
       box-shadow: 0 2px 16px #00b4ff33;
       margin-top: 6px;
       transition: box-shadow 0.2s;
+      display: flex;
+      align-items: stretch;
+      justify-content: stretch;
+      overflow: hidden;
+    }
+    .viewer {
+      border: none;
+      width: 100%;
+      height: 260px;
+      border-radius: 10px;
+      background: #0f2027;
+      transition: box-shadow 0.2s;
+    }
+    .fullscreen-btn {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      width: 38px;
+      height: 38px;
+      background: rgba(0,180,255,0.10);
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 10;
+      transition: background 0.2s, transform 0.2s;
+    }
+    .fullscreen-btn:hover {
+      background: rgba(0,180,255,0.30);
+      transform: scale(1.08);
+    }
+    .fullscreen-btn svg {
+      width: 24px;
+      height: 24px;
+      fill: #00b4ff;
+      pointer-events: none;
     }
     .credit {
       color: #2c5364;
@@ -86,6 +124,37 @@
       margin-top: 10px;
       text-align: center;
       letter-spacing: 1px;
+    }
+    /* Fullscreen styles */
+    .viewer-wrapper:fullscreen,
+    .viewer-wrapper:-webkit-full-screen,
+    .viewer-wrapper:-ms-fullscreen {
+      width: 100vw !important;
+      height: 100vh !important;
+      max-width: 100vw !important;
+      max-height: 100vh !important;
+      border-radius: 0 !important;
+      background: #0f2027;
+      box-shadow: none;
+    }
+    .viewer-wrapper:fullscreen .viewer,
+    .viewer-wrapper:-webkit-full-screen .viewer,
+    .viewer-wrapper:-ms-fullscreen .viewer {
+      height: 100vh !important;
+      border-radius: 0 !important;
+    }
+    .viewer-wrapper:fullscreen .fullscreen-btn svg.exit,
+    .viewer-wrapper:-webkit-full-screen .fullscreen-btn svg.exit,
+    .viewer-wrapper:-ms-fullscreen .fullscreen-btn svg.exit {
+      display: inline;
+    }
+    .viewer-wrapper:fullscreen .fullscreen-btn svg.enter,
+    .viewer-wrapper:-webkit-full-screen .fullscreen-btn svg.enter,
+    .viewer-wrapper:-ms-fullscreen .fullscreen-btn svg.enter {
+      display: none;
+    }
+    .fullscreen-btn svg.exit {
+      display: none;
     }
     @media (max-width: 600px) {
       .container {
@@ -102,21 +171,74 @@
   <div class="container">
     <h1>HTML Viewer</h1>
     <textarea id="htmlInput" placeholder="Paste your HTML code here..."></textarea>
-    <iframe class="viewer" id="htmlViewer"></iframe>
+    <div class="viewer-wrapper" id="viewerWrapper">
+      <button class="fullscreen-btn" id="fullscreenBtn" title="Fullscreen">
+        <!-- Enter fullscreen icon -->
+        <svg class="enter" viewBox="0 0 24 24">
+          <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+        </svg>
+        <!-- Exit fullscreen icon -->
+        <svg class="exit" viewBox="0 0 24 24">
+          <path d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z"/>
+        </svg>
+      </button>
+      <iframe class="viewer" id="htmlViewer"></iframe>
+    </div>
     <div class="credit">Minimalist Black &amp; Blue Theme</div>
   </div>
   <script>
     const input = document.getElementById('htmlInput');
     const viewer = document.getElementById('htmlViewer');
+    const wrapper = document.getElementById('viewerWrapper');
+    const fullscreenBtn = document.getElementById('fullscreenBtn');
 
     input.addEventListener('input', () => {
       const html = input.value;
       viewer.srcdoc = html;
     });
 
-    // Optional: Set a default template
+    // Default template
     input.value = "<h2 style='color:#00b4ff;text-align:center;'>Hello, world!</h2><p style='color:#fff;text-align:center;'>Paste your HTML above.</p>";
     viewer.srcdoc = input.value;
+
+    // Fullscreen logic
+    fullscreenBtn.addEventListener('click', () => {
+      if (
+        document.fullscreenElement === wrapper ||
+        document.webkitFullscreenElement === wrapper ||
+        document.msFullscreenElement === wrapper
+      ) {
+        if (document.exitFullscreen) {
+          document.exitFullscreen();
+        } else if (document.webkitExitFullscreen) {
+          document.webkitExitFullscreen();
+        } else if (document.msExitFullscreen) {
+          document.msExitFullscreen();
+        }
+      } else {
+        if (wrapper.requestFullscreen) {
+          wrapper.requestFullscreen();
+        } else if (wrapper.webkitRequestFullscreen) {
+          wrapper.webkitRequestFullscreen();
+        } else if (wrapper.msRequestFullscreen) {
+          wrapper.msRequestFullscreen();
+        }
+      }
+    });
+
+    // Update button icon on fullscreen change
+    function updateFullscreenIcon() {
+      const isFull = (
+        document.fullscreenElement === wrapper ||
+        document.webkitFullscreenElement === wrapper ||
+        document.msFullscreenElement === wrapper
+      );
+      fullscreenBtn.title = isFull ? "Exit Fullscreen" : "Fullscreen";
+    }
+
+    document.addEventListener('fullscreenchange', updateFullscreenIcon);
+    document.addEventListener('webkitfullscreenchange', updateFullscreenIcon);
+    document.addEventListener('msfullscreenchange', updateFullscreenIcon);
   </script>
 </body>
 </html>
